<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RimZhim</string>
    <string name="Your_name_must_match">Your name must match the name on your PAN Card and Bank Account</string>
    <string name="rupee">₹ </string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="facebook_app_id" translatable="false">fb_id</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb(fb_id)</string>
    <string name="facebook_client_token" translatable="false">facebook_client_token</string>
    <string name="google_web_client_id" translatable="false">google_auth_web_client_id</string>
    <string name="gif_api_key" translatable="false">gif_api_key_here</string>
    <string name="agora_app_id" translatable="false">your_agora_app_id</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share_profile_domain" translatable="false">apps.qboxus.com</string>
    <string name="share_profile_domain_second" translatable="false">demo.qboxus.com</string>
    <string name="share_profile_endpoint" translatable="false">/tictic/</string>
    <string name="share_profile_endpoint_second" translatable="false">/profile/</string>
    <string name="need_necessary_permissions">Necessary permissions acquired</string>
    <string name="request_verification">Request Verification</string>
    <string name="upper_body_below">Submitting a request for verification \ndoes not guarantee that your account will be verified</string>
    <string name="lower_body">We require a government-issued photo ID that shows \nyour name and date of birth(e.g driver\'s license.\npassport or national identification card) or official \nbusiness documents(tax filing, recent utility bill, article of \nincorporation) in order to review your request.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_function_not_available_in_demo">Delete Function not available in demo</string>
    <string name="privacy_function_not_available_in_demo">Privacy Setting Function not available in demo</string>
    <string name="friends">\@Friends</string>
    <string name="hashtags">#Hashtags</string>
    <string name="whoops">Whoops!</string>
    <string name="no_fav_sound">No sound found sofar.</string>
    <string name="no_fav_video">There is no favourite video so far.</string>
    <string name="no_liked_video">There is no liked videos so far.</string>
    <string name="no_private_video">There is no videos so far.</string>
    <string name="no_hashtag">There is no data so far.</string>
    <string name="no_comment">Be the first to comment!</string>
    <string name="no_following">When you follow people. you\'ll see them here</string>
    <string name="not_inbox">There is no inbox you have so far</string>
    <string name="no_notification">There is no notifications you have so far</string>
    <string name="no_search">There is no data so far.</string>
    <string name="live">Live</string>
    <string name="add_sound">Add Sound</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="choose_file">Choose File</string>
    <string name="send">Send</string>
    <string name="upload">Upload</string>
    <string name="name_of_the_sounds">Name of the sounds</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="not_insterested">Not Insterested</string>
    <string name="delete">Delete</string>
    <string name="sign_up">Sign up</string>
    <string name="when_s_your_birthday">When\'s your birthday?</string>
    <string name="your_birthday_won_t_be_shown_publicly">Your birthday won\'t be shown publicly.</string>
    <string name="favourites">Favourites</string>
    <string name="live_users">Live Users</string>
    <string name="no_other_user_is_live_at_that_time_n_click_of_go_live_for_live_video_streaming">No other user is live at that time.\n click of \'Go Live\' for live video streaming.</string>
    <string name="notifications">Notifications</string>
    <string name="enter_4_digit_code">Enter 4 digit Code</string>
    <string name="your_code_was_sent_to">Your code was sent to</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot password</string>
    <string name="we_ll_email_you_a_code_to_reset_your_password">We\'ll email you a code to reset your password.</string>
    <string name="your_code_was_emailed_to">Your code was emailed to</string>
    <string name="resend_code">Resend Code</string>
    <string name="create_password">Create password</string>
    <string name="use_8_20_characters_from_password">Your password length must be between 5-12 character</string>
    <string name="login">Login</string>
    <string name="login_in_to_musictok">Login in to Musictok</string>
    <string name="manage_your_account_check_notification_comments_on_videos_and_more">Manage Your account, check notification, comments on videos, and more</string>
    <string name="user_phone_email_username">User phone / email / username</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="by_signing_up_you_confirm_that_you_agree_to_our_terms_of_nuse_and_have_read_and_understood_our_privacy_policy_nif_you_signup_with_sms_sms_fee_may_apply">By signing up, you confirm that you agree to our \nTerms of Use and have read and understood \nour Privacy Policy.\nif you signup with SMS. SMS fee may apply</string>
    <string name="send_code">Send Code</string>
    <string name="inbox">Inbox</string>
    <string name="didn_t_get_a_code_request_phone_call">Didn\'t get a code? Request phone call</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="heart">Heart</string>
    <string name="follow">Follow</string>
    <string name="privacy_and_settings">Privacy and Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="privacy_setting">Privacy setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="change_password">Change Password</string>
    <string name="create_username">Create username</string>
    <string name="you_can_always_change_the_username_later">You can always change the username later</string>
    <string name="send_to">Send to</string>
    <string name="share_to">Share to</string>
    <string name="save_video">Save Video</string>
    <string name="copy_link">Copy link</string>
    <string name="your_message">Your Message</string>
    <string name="comment_message_here">Comment message here...</string>
    <string name="show_less">Show Less</string>
    <string name="title">Title</string>
    <string name="trending">Trending hashtag</string>
    <string name="duet_with">#duet with</string>
    <string name="skip">Skip</string>
    <string name="please_wait">Please Wait</string>
    <string name="likes">likes</string>
    <string name="comment">comment</string>
    <string name="share">Share</string>
    <string name="promote">Promote</string>
    <string name="no_payout_method">No payout method</string>
    <string name="server_error">Server Error</string>
    <string name="error_title">Something went wrong!</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="error_details">Error details:</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="restart_app">Restart app</string>
    <string name="close_app">Close app</string>
    <string name="send_report">Send report</string>
    <string name="live_notification_description">Recommended notification are set by defult. They are determined based on your viewing history, who you follow, etc. You can also choose to receive all notifications from this user, or turn off notification completely.</string>
    <string name="related">Related</string>
    <string name="terms_of_condition">By signing up, you confirm that you agree to our \n Terms of Use and have read and understood \n our Privacy Policy.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="please_confirm_terms_and_condition">Please confirm terms and condition</string>
    <string name="add_account">Add account</string>
    <string name="switch_account">Switch Account</string>
    <string name="remove_this_follower">Remove this follower</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="video_already_in_progress">Please wait video already in uploading progress</string>
    <string name="tap_to_exist">Tap Again To Exit</string>
    <string name="txt_title_not_supported">Alert!</string>
    <string name="txt_msg_not_supported">Sorry, this device is not supported</string>
    <string name="txt_trimming_video">Processing Video…</string>
    <string name="txt_failed_to_trim">Failed to trim</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_dlah">\\</string>
    <string name="txt_smaller">Video should be smaller than</string>
    <string name="edit_video">Edit Video</string>
    <string name="txt_compress_video">Compressing Video…</string>
    <string name="txt_edt_video">Edit Video</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_file_location">Open file location?</string>
    <string name="send_message_here">Send Message Here...</string>
    <string name="error_detail">Error Detail</string>
    <string name="email_adress">Email address</string>
    <string name="password">Password</string>
    <string name="select_video">Select Video</string>
    <string name="leave_a_comment">Leave a comment...</string>
    <string name="pick_a_topic_to_add">Pick a topic to chat</string>
    <string name="start_live_broadcast">Start Live Broadcast</string>
    <string name="wallet">Wallet</string>
    <string name="coins_balance">Coins Balance</string>
    <string name="cashout">Cashout</string>
    <string name="buy_coins">Buy Coins</string>
    <string name="post">Post</string>
    <string name="describe_your_video">Describe your video</string>
    <string name="hash_duet_with">#duet with</string>
    <string name="close_button">Close</string>
    <string name="done_button">Done</string>
    <string name="flash_button">Flash</string>
    <string name="filter_button">Filter</string>
    <string name="flip_button">Flip</string>
    <string name="record_button">Record</string>
    <string name="timer_button">Timer</string>
    <string name="speed_button">Speed</string>
    <string name="upload_button">Upload</string>
    <string name="sound_hint">Click to choose a song.</string>
    <string name="timer_hint">To cancel timer before it starts, click here.</string>
    <string name="chat_label">Chat</string>
    <string name="likes_label">Likes</string>
    <string name="followers_label">Followers</string>
    <string name="follow_label">Follow</string>
    <string name="following_label">Following</string>
    <string name="views_label">Views</string>
</resources>