<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/camera"
            android:keepScreenOn="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cameraFacing="front" />

        <com.example.segmentedprogressbar.SegmentedProgressBar
            android:id="@+id/segments"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close_button"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_close_recorder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/sound_hint"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_baseline_music_note_24"
            app:drawableTint="@android:color/white"
            style="@style/TextOnShadow" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:background="@drawable/ovel_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/filter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/filter_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_ring_filter_icon_svg"
                />



            <ImageButton
                android:id="@+id/flash"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/flash_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_flash" />

            <ImageButton
                android:id="@+id/speed"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/speed_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_speed" />



            <ImageButton
                android:id="@+id/timer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/timer_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_timer_svg" />

            <ImageButton
                android:id="@+id/flip"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/flip_button"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_rotate_camera_svg" />

        </LinearLayout>

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/speeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:sc_border_width="2dp"
            app:sc_checked_text_color="@android:color/black"
            app:sc_corner_radius="10dp"
            app:sc_tint_color="@color/colorSpeedBackground"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/speed05x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-2x"
                tools:ignore="HardcodedText"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/speed075x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-1.5x"
                tools:ignore="HardcodedText"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/speed1x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1x"
                tools:ignore="HardcodedText"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/speed15x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.5x"
                tools:ignore="HardcodedText"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/speed2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2x"
                tools:ignore="HardcodedText"
                style="@style/RadioButton" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/upload"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/upload_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/record"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_upload_recorder"  />

            <ImageButton
                android:id="@+id/record"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/record_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_record_button" />

            <ImageButton
                android:id="@+id/done"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/done_button"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/record"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_recorder" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="100sp"
                android:textStyle="bold"
                tools:text="3"
                style="@style/TextOnShadow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_hint"
                android:textColor="@android:color/white"
                style="@style/TextOnShadow" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/partial_timer_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
