<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/photo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            app:placeholderImage="@drawable/photo_placeholder"
            app:roundAsCircle="true"
            app:roundingBorderColor="@color/colorProfileBadge"
            app:roundingBorderWidth="2dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Monjolika" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="\@username" />

                <ImageView
                    android:id="@+id/verified"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    app:srcCompat="@drawable/ic_verified_badge"
                    android:visibility="gone"
                    app:tint="@color/colorAccent"
                    tools:ignore="ContentDescription"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/follow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/follow_label"
            app:icon="@drawable/ic_follow"
            app:iconGravity="textStart"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_label"
            app:icon="@drawable/ic_message"
            app:iconGravity="textStart"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        tools:text="This is #some non-biological @content." />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/views_label"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/likes_label"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followers_count"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/followers_label"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followed_count"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/following_label"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
